...
}

// MARK: - TaskCategory

enum TaskCategory: String, Codable, CaseIterable {
    case personal = "Personal"
    case study    = "Study"
    case health   = "Health"
    case work     = "Work"
    case focus    = "Focus"

    var tagBackground: Color {
        switch self {
...
